--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
     [
       {
         "id": 1,
-        "description": .",
+        "description": "",
         "question": "Solve the equation 3-(3m-7)=43",
         "options": ["m=-13", "m=-47/3", "m=-11", "m=11"],
         "answerIndex": 2,
@@ -9,7 +9,7 @@
       },
       {
         "id": 2,
-        "description": .",
+        "description": "",
         "question": "A boy is 10yrs old and his mother is 37yrs old. In how many years' time will the mother be twice as old as her son",
         "options": ["17yrs", "18yrs", "19yrs", "20yrs"],
         "answerIndex": 0,
